--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ background:000000;
 
 
    <div class="logo">
-     <img src="\tom1.jpg">
+     <img src="tom1.jpg">
 
    </div>
 
@@ -83,7 +83,7 @@ A number of spin-offs have been made, including the television series The Tom an
 Tom and Jerry has been on Boomerang ever since the channel's launch on April 1, 2000.</P></div><br>
 
 <div class="con1">
-    <img src="c:\tom2.jpg">
+    <img src="tom2.jpg">
     <h1>TOM:</h1>
     <br>
 <p>Tom (named "Jasper" in his debut appearance) is a gray and white domestic shorthair cat. ("Tom" is a generic name for a male cat.) He is usually but not always, portrayed as living a comfortable, or even pampered life, while Jerry (whose name is not explicitly mentioned in his debut appearance) is a small, brown house mouse who always lives in close proximity to Tom. Despite being very energetic, determined and much larger, Tom is no match for Jerry's wits. Jerry also possesses surprising strength for his size, approximately the equivalent of Tom's, lifting items such as anvils with relative ease and withstanding considerable impacts. Although cats typically chase mice to eat them, it is quite rare for Tom to actually try to eat Jerry, but only to hurt or compete with him as usual in a more intimidating strategy to just taunt Jerry (even as revenge), and even to obtain a reward from a human (including his owner(s)/master(s)) for catching Jerry, or for generally doing his job greatly as a house cat. By the final "fade-out" of each cartoon, Jerry usually gets the best of Tom.
@@ -100,7 +100,7 @@ Tom and Jerry speaking</p></div>
 
 
 <div class="con2">
-    <img src="\tom3.jpeg">
+    <img src="tom3.jpeg">
     <h1>Tom & Jerrys Bond:</h1>
     <br>
     <p>
