--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Tom and Jerry speaking</p></div>
 
 
 <div class="con2">
-    <img src="tom3.jpeg">
+    <img src="tom3.jpg">
     <h1>Tom & Jerrys Bond:</h1>
     <br>
     <p>
